syntax = "proto3";
package penumbra.view;

option go_package = "github.com/penumbra-zone/penumbra/proto/go-proto";

import "transaction.proto";
import "crypto.proto";

// The view protocol is used by a view client, who wants to do some
// transaction-related actions, to request data from a view service, which is
// responsible for synchronizing and scanning the public chain state with one or
// more full viewing keys.
//
// View protocol requests include a hash of the full viewing key, used to
// identify which set of data to query.  This also works as a pseudo-auth system
// (assuming transport security, the client has to know the FVK to request its
// data).  (TODO: refine this)
service ViewProtocol {
    // Get current status of chain sync
    rpc Status(StatusRequest) returns (StatusResponse);

    // Queries for notes.
    rpc Notes(NotesRequest) returns (stream NoteRecord);

    // Returns authentication paths for the given note commitments.
    //
    // This method takes a batch of input commitments, rather than just one, so
    // that the client can get a consistent set of authentication paths to a
    // common root.  (Otherwise, if a client made multiple requests, the wallet
    // service could have advanced the note commitment tree state between queries).
    rpc Witness(WitnessRequest) returns (transaction.WitnessData);

    // Queries for assets.
    rpc Assets(AssetRequest) returns (stream crypto.Asset);
}

// Requests sync status of the view service.
message StatusRequest {
    // Identifies the FVK for the notes to query.
    crypto.FullViewingKeyHash fvk_hash = 1;
}

// Requests all assets known to the view service.
message AssetRequest {
    // For verification.
    crypto.FullViewingKeyHash fvk_hash = 1;
}

// Returns the status of the view service and whether it is synchronized with the chain state.
message StatusResponse {
    /// Whether the view service is synchronized with the chain state.
    bool synchronized = 1;
    // The height reported by the full node
    uint64 chain_height = 2;
    // The height the view service has synchronized to so far
    uint64 sync_height = 3;
}

// A note plaintext with associated metadata about its status.
message NoteRecord {
    // The note commitment, identifying the note.
    crypto.NoteCommitment note_commitment = 1;
    // The note plaintext itself.
    crypto.Note note = 2;
    // A precomputed decryption of the note's diversifier index.
    crypto.DiversifierIndex diversifier_index = 3;
    // The note's nullifier.
    crypto.Nullifier nullifier = 4;
    // The height at which the note was created.
    uint64 height_created = 5;
    // Records whether the note was spent (and if so, at what height).
    optional uint64 height_spent = 6;
    // The note position.
    uint64 position = 7;
}

// A query for notes known by the view service.
//
// This message uses the fact that all proto fields are optional
// to allow various filtering on the returned notes.
message NotesRequest {
    // Identifies the FVK for the notes to query.
    crypto.FullViewingKeyHash fvk_hash = 1;

    // If set, return spent notes as well as unspent notes.
    bool include_spent = 2;

    // If set, only return notes with the specified asset id.
    crypto.AssetId asset_id = 3;

    // If set, only return notes with the specified diversifier index.
    crypto.DiversifierIndex diversifier_index = 4;

    // If set, stop returning notes once the total exceeds this amount.
    //
    // Ignored if `asset_id` is unset or if `include_spent` is set.
    uint64 amount_to_spend = 5;
}

message WitnessRequest {
    // Identifies the FVK for the note commitments to query.
    crypto.FullViewingKeyHash fvk_hash = 1;

    // The note commitments to obtain auth paths for.
    repeated crypto.NoteCommitment note_commitments = 2;
}
